styles.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');

:root {
    --Very-Dark-Grayish-Blue: hsl(217, 19%, 35%);
    --Desaturated-Dark-Blue: hsl(214, 17%, 51%);
    --Grayish-Blue: hsl(212, 23%, 69%);
    --Light-Grayish-Blue: hsl(210, 46%, 95%);
}


body {
    height: 100vh;
    background-color: var(--Light-Grayish-Blue);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 13px;
    font-family: Manrope, sans-serif;
    color: var(--Very-Dark-Grayish-Blue);
}

* {
    margin: 0;
}

h1 {
    font-size: 1.2rem;
}

h3 {
    font-size: 0.75rem;
}

.card {
    display: flex;
    background-color: white;
    max-width: 700px;
    height: 300px;
    border-radius: 15px;
    box-shadow: 0 10px 30px var(--Desaturated-Dark-Blue);
}

.card-content {
    padding: 5% 8% 5% 5%;
    display: flex;
    flex-direction: column;
}

.card-content p {
    color: var(--Desaturated-Dark-Blue);
}

.container-img {
    width: 300px;
    height: 100%;
    object-fit: cover;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    object-position: left;
}

.card-text p {
    margin-top: 20px;
}

.avatar {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.profile {
    display: flex;
    gap: 10px;
    align-items: center;
}

.profile time {
    color: var(--Grayish-Blue);
}

.card-footer {
    display: flex;
    padding: 15px;
    position: relative;
}

.share-container {
    margin-left: auto;
    position: relative;
}

.share-button {
    min-width: 40px;
    max-height: 40px;
    margin-left: auto;
    background-color: white;
    border: none;
    border-radius: 50%;
    padding: 10px;
    cursor: pointer;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
}

.share-button:hover {
    background-color: var(--Very-Dark-Grayish-Blue);
}

.share-popup {
    display: none;
    position: absolute;
    transform: translateY(-60px);
    right: -67px;
    background: var(--Very-Dark-Grayish-Blue);
    color: white;
    padding: 10px;
    border-radius: 10px;
    gap: 10px;
    align-items: center;
    padding: 10px 30px 10px 30px;
    opacity: 0;
    transition: opacity 0.3s ease;
    overflow: visible;
    justify-content: center;
}

.share-popup.active {
    opacity: 1;
    display: flex;
}

.popup-content {
    display: flex;
    gap: 15px;
}

.squad {
    width: 20px;
    height: 20px;
    background-color: var(--Very-Dark-Grayish-Blue);
    position: absolute;
    bottom: -0.6rem;
    transform: rotate(45deg);
    z-index: 10;
}


@media (max-width: 750px) {
    .card {
        flex-direction: column;
        max-width: 90vw;
        height: auto;
        position: relative;
        border-radius: 10px;
        overflow: hidden;
    }

    .container-img {
        width: 100%;
        height: 200px;
        border-radius: 10px 10px 0px 0px;
    }

    .card-content {
        padding: 0;
        gap: 0;
    }

    .card-text {
        padding: 20px 20px 0px 20px;
    }

    .card-footer.active {
        position: relative;
        z-index: 2;
        margin: 0;
        display: flex;
        flex-direction: column;
        padding: 0;
    }

    .share-button {
        position: relative;
        z-index: 2;
    }

    .share-button.active {
        top: -15px;
        right: 15px;
        background-color: var(--Desaturated-Dark-Blue);
    }

    .active svg path {
        fill: white;
    }

    .share-popup {
        display: none;
        position: relative;
        height: 3rem;
        top: 2.5rem;
        right: 0;
        color: white;
        padding: 15px;
        border-radius: 0 0 10px 10px;
        justify-content: space-between;
        align-items: center;
        z-index: 1;
    }

    .share-popup.active {
        display: flex;
        transform: translateX(0%);
    }

    .popup-content {
        display: flex;
        align-items: center;
        gap: 15px;
        width: 100%;
        justify-content: left;
    }

    .squad {
        display: none;
    }

    .share-container {
        position: relative;
        display: flex;
        align-items: center;
        width: 100%;
    }

    .profile.active {
        display: none;
    }
}

